<resources>
    <string name="app_name">TaskShemarroUi</string>
    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_clips">Clips</string>
    <string name="title_search">Search</string>
    <string name="title_downloads">Downloads</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>