<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskshemarroui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.taskshemarroui.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_home2"
        />

    <fragment
        android:id="@+id/navigation_clips"
        android:name="com.example.taskshemarroui.ClipsFragment"
        android:label="@string/title_clips"
        tools:layout="@layout/fragment_clips" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.taskshemarroui.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_downloads"
        android:name="com.example.taskshemarroui.DownloadsFragment"
        android:label="@string/title_downloads"
        tools:layout="@layout/fragment_downloads" />


</navigation>